# VR

./: .ignore  CMakeLists.txt  Readme.md  main.cpp
Assets/glsl/: best-compiled.frag  lavavolca-compiled.glsl  lavavolca.glsl  other-compiled.frag  other.frag  temp-compiled.frag  temp.frag  vor-compiled.frag  vor.frag
Assets/shaders/: Andromedas_Jewel.frag  Clouds.frag  Confuse.frag  Cross.frag  Flame.frag  Grayscott.frag  Kirby.frag  MarioWorld.frag  RandomPixelShift.frag  Raymarching-primitives.frag  SF.frag  StarNest.frag  YetAnotherSimpleRaymarcher.frag  example.frag  lidan.frag  ll.frag  mountain-compiled.frag  mountain.frag
geometry/: Rectangle.cpp  Rectangle.h  Size.cpp  Size.h  Vertex.cpp  Vertex.h
opengl/: BufferObject.cpp  BufferObject.h  FrameBuffer.cpp  FrameBuffer.h  RenderWindow.cpp  RenderWindow.h  Sample2D.cpp  Sample2D.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  VertexArrayObject.cpp  VertexArrayObject.h  Window.cpp  Window.h
render/: Cam.cpp  Cam.h  Camera.cpp  Camera.h  EulerAngles.cpp  EulerAngles.h  MatrixCalculation.cpp  MatrixCalculation.h  Quaternion.cpp  Quaternion.h  Timer.cpp  Timer.h
shadertoy/: ShaderToy.h
util/: EigenLidan.h  FileReader.h  Lmath.h  Log.h  Matrix.h  util.cpp  util.h
